# vLLM-chunked-vision-encoder

./: .gitignore  AGENTS.md  LICENSE  README.md  benchmark_deployment.py  benchmark_encoder_pipeline.py  benchmark_suite.py  benchmark_ttft.py  pyproject.toml
scripts/: ensure_python_headers.sh  run_qwen_benchmark_matrix.sh  serve_qwen_control.sh  serve_qwen_experimental.sh
tests/: test_benchmarking.py  test_budgeting.py  test_encoder.py  test_mcp_server.py  test_serialization.py
vllm_chunked_vision/: __init__.py  backends.py  benchmarking.py  budgeting.py  config.py  encoder.py  integration.py  mcp_server.py  media.py  qwen2_5_vl_backend.py  serialize.py  types.py
